--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="product">
             <h2>watch</h2>
             <p>Price: 1500rs</p>
-            <img src="images\watch.jpeg" width="200px" height="200px">
+            <img src="Images\watch.jpeg" width="200px" height="200px">
             <p>Introducing the Titan Raga Delight Metal Strap Watch, a perfect blend of elegance and delightful charm.
                 • The square dial exudes a captivating and charming allure, making a bold statement on your wrist.
                 • Crafted with a metal case material, this watch offers durability and a sleek appearance.
@@ -44,7 +44,7 @@
         <div class="product">
             <h2>bagpack</h2>
             <p>Price: 500rs</p>
-            <img src="images\bagpack.jpeg" width="200px" height="200px">
+            <img src="Images\bagpack.jpeg" width="200px" height="200px">
             <p>Fit Type: regular
                 Innovative Design: AirCase Laptop Backpack is made of Premium Vegan
                  Leather for your 15.6 Inch Laptop. 
@@ -56,7 +56,7 @@
         <div class="product">
             <h2>shoes</h2>
             <p>Price: 900rs</p>
-            <img src="images/shoes.jpeg" width="200px" height="200px">
+            <img src="Images/shoes.jpeg" width="200px" height="200px">
             Sneakers are a perfect blend of utility and comfort, and they can uplift the wearer’s ensemble instantly.
              Regardless of the outfit you choose to wear, 
             the classy pair of cleats are a must-have in any fashion lover’s closet. 
@@ -66,7 +66,7 @@
         <div class="product">
             <h2>phone</h2>
             <p>Price:105500rs</p>
-            <img src="imagesiphone.jpeg" width="200px" height="200px">
+            <img src="Images\iphone.jpeg" width="200px" height="200px">
             <p>5G Connectivity (SA / NSA): More spectrum bands supported by a handset would provide wider 5G connectivity across markets.
                 Enhanced Coverage: Handset features that can increase the time spent on 5G technology.
                 Superfast 4G: Features that enhance speeds even in 4G coverage.</p>
@@ -75,7 +75,7 @@
         <div class="product">
             <h2>kurti</h2>
             <p>Price: 700rs</p>
-            <img src="images\kurthi.jpeg" width="200px" height="200px" >
+            <img src="Images\kurthi.jpeg" width="200px" height="200px" >
             Style is a way to say who you are without having to speak try trendy naira cut 
             blue full sleeves kurti in georgette with floral prints on it.
 This featured casual wear kurti avaiable ready-to-wear in M & L size and has extra 2 inches of margin to
