--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="product">
             <h2>bagpack</h2>
             <p>Price: 500rs</p>
-            <img src="bagpack.jpeg" width="200px" height="200px">
+            <img src="bagpack.jpg" width="200px" height="200px">
             <p>Fit Type: regular
                 Innovative Design: AirCase Laptop Backpack is made of Premium Vegan
                  Leather for your 15.6 Inch Laptop. 
